--- a/src/components/home/PowerOfData.css
+++ b/src/components/home/PowerOfData.css
@@ -1,6 +1,5 @@
 .power-section {
   padding: var(--section-padding-y) 0;
-  background: white;
 }
 
 .power-grid {
@@ -15,7 +14,7 @@
 
 .power-title {
   font-size: 42px;
-  color: #1a1a1a;
+  /* color: #1a1a1a; */
   padding-bottom: 14px;
 }
 
